fix color contrast

--- a/style.css
+++ b/style.css
@@ -391,7 +391,7 @@ form {
 }
 
 h5 {
-  color: white;
+  color: black;
   text-align: center;
   font-size: 40px;
   font-weight: bold;
@@ -402,7 +402,7 @@ h5 {
 }
 
 .tonic-par1 {
-  color: white;
+  color: black;
   width: 90%;
   text-align: center;
   font-size: 20px;
@@ -651,7 +651,7 @@ input[type=email] {
   }
 
   .tonic-par1 {
-    color: white;
+    color: black;
     width: 35%;
     text-align: center;
     font-size: 20px;
@@ -723,7 +723,7 @@ input[type=email] {
   .tonic-2 ul li {
     display: inline-block;
     padding: 0 5px;
-    color: #7a869a;
+    color: black;
   }
 
   .lag ul li {
